2022-03-19  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'openssl_bump'

	updated OpenSSL to version 1.1.1n

2022-03-07  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'bobafetthotmail-patch-1'

	Merge branch 'patch-1' of git://github.com/bobafetthotmail/esos into bobafetthotmail-patch-1

	Merge branch 'install_model_egrep'

	install.sh: if "install_model" is specified pass it to 'grep -E' so we can match multiple model strings (eg, "TOSHIBA|Micron|SONY")

	Merge branch 'rc.0_check_state'

	rc.0: when stopping LATE_SERVICES and EARLY_SERVICES check that they return a status of either RUNNING or UNKNOWN before attempting

2022-03-05  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'add_switchtec-user'

	added the switchtec-user package (provides the 'switchtec' CLI tool)

2022-02-25  Alberto Bursi  <alberto.bursi@outlook.it>

	no RAM size check with esos_persist option
	Disable the RAM size check if esos_persist kernel commandline option is used.
	Enforcing this ram amount is relevant only if ESOS needs to run from RAM.
	If ESOS is run with esos_persist kernel parameter, it is not doing that.
	With this change, people that want to use ESOS with less than 3GB of RAM
	only need to edit the grub config in their boot partition to add esos_persist
	and they are set, no need to recompile/rebuild initramfs.

2022-02-25  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'cheroot_fix'

	added a patch for the 'cheroot' module in Python to prevent an excessive logging / hang condition from SSL errors

2022-02-16  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'sbd_auto_unfence'

	rc.sbd: increase SBD_STARTS_SEC to 1200 seconds (handles slower-booting controllers)

2022-02-12  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch '20220211_tweaks'

	added the cpuset package; updated cls_switchtec driver to latest version; use CONFIG_PREEMPT_VOLUNTARY instead of CONFIG_PREEMPT_NONE in kernel config
