@@ -265,3 +265,4 @@ c7e74bf65289d8f0899c103fca3c0fac  mlnx-tools-5.2.0.tar.gz
 365dcccfef9ac095530821a7e711b308  cpuset-1.6.tar.gz
 c9c73811ca2bef819f2544e83f43514f  cls_switchtec-4.1.0_5.4_20220211.tar.xz
 9bd9516020e3c3610760556100022b9d  switchtec-user-3.0.tar.gz
+f414e0394d73d77ddf87738d03c712ee  memcached-1.6.14.tar.gz
