@@ -265,3 +265,4 @@ e6d4c76be82c676dd7e8c61a29b2ac8510ae108a810b5d1d18fc9a1d2c9a2497  wget-1.21.2.ta
 61702a7ad9acb9f0ff30abd37cc74dbae52095f265a89aacee99f42a61ac2512  cpuset-1.6.tar.gz
 e76088f6b4c66dec55510bb66a91d06bc8533c13cf57cc39180da8a2ac877fef  cls_switchtec-4.1.0_5.4_20220211.tar.xz
 08eaafc6831e8fde751503ed82e7f82b15a38b6f53ea631ed340baa65af622bc  switchtec-user-3.0.tar.gz
+54d63742c6886dcdc4e0c87f4439a2930a876cd9f2bfa01d699b0c6bad1707b3  memcached-1.6.14.tar.gz
